# modrith.py

./: pyproject.toml  requirements.txt
docs/: readme.md
modrinth/: __init__.py  labrinth.py  project.py
