[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "modrinth"
version = "1.0.0"
description = " Interact with Modrinth's Labrinth API through Python."
readme = "docs/readme.md"
authors = [{ name = "Beta Pictoris", email = "beta@hai.haus" }]
license = { file = "license.md" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["minecraft", "modrinth", "modrinth-api", "labrinth"]
dependencies = ["requests"]
requires-python = ">=3.11"

[project.optional-dependencies]
dev = ["black", "bumpver", "isort", "pip-tools", "pytest"]

[project.urls]
Homepage = "https://github.com/BetaPictoris/modrinth.py"

[project.scripts]
